<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Board Game</string>
    <string name="player_1">Player1: 0</string>
    <string name="player_2">Player2: 0</string>
    <string name="player_1_dynamic">%1$s: %2$d</string>
    <string name="player_2_dynamic">%1$s: %2$d</string>
    <string name="player_turn" tools:ignore="Typos">Turn: Player1</string>
    <string name="player_turn_dynamic">Turn: %1$s</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="reset_game">Reset Game</string>
    <string name="dice_description">A dice image</string>
    <string name="game_over">Game Over</string>
    <string name="player_wins" translatable="false">%1$s Wins</string>
    <string name="game_name">Snake Ladder</string>
    <string name="offline_mode">Offline</string>
    <string name="offline_bot">Play with Robot</string>
    <string name="offline_pvp">Offline P v P</string>
    <string name="nearby_mode">Play Nearby</string>
    <string name="online_mode">Online</string>
    <string name="online_player">Play Random Match</string>
    <string name="online_friend">Play with Friend(Room)</string>
    <string name="back">Back</string>
    <string name="mode_choice">Choose a Mode</string>
    <string name="username">Username</string>
    <string name="username_val">%1$s</string>
    <string name="username_initial">%1$s</string>
    <string name="edit_option">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_username">Edit Username</string>
    <string name="accept">Accept</string>
    <string name="hosting_nearby">Hosting Nearby</string>
    <string name="waiting_players">Waiting for incoming requests…</string>
    <string name="nearby_players">Nearby Players</string>
    <string name="tap_players">Tap a player to send a request:</string>
    <string name="player">Player</string>
    <string name="incoming_request">%1$s is requesting to join…</string>
    <string name="host">Host</string>
    <string name="join">Join</string>
    <string name="req_declined">Request declined, select another player…</string>
    <string name="searching_nearby">Searching for nearby players…</string>
    <string name="outgoing_request">Requesting to join %1$s</string>
    <string name="friendly_match">Friendly Match</string>
    <string name="join_room">Join Room</string>
    <string name="host_room">Host Room</string>
    <string name="enter">Enter Room</string>
    <string name="room_code">Room Code: %1$s</string>
    <string name="room_code_waiting">Room Code: Loading…</string>
    <string name="join_wait">Waiting for player to join…</string>
    <string name="server_error">Could Not reach server.</string>
    <string name="empty_code">Enter a room code first</string>
    <string name="joining">Joining Room…</string>
    <string name="finding_match">Finding match…</string>
    <string name="timeout">Remaining: %1$ds</string>
    <string name="opponent_wait">Waiting for opponent to reconnect</string>
    <string name="own_wait">Trying to Reconnect</string>
    <string name="reconnected">Reconnected, awaiting for data from the opponent</string>
    <string name="opponent_reconnect">Opponent reconnected, sending data</string>
    <string name="go_back">Go Back</string>
    <string name="loss">%1$d loses</string>
    <string name="wins">%1$d wins</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="no_wins">Wins</string>
    <string name="name">Player Name</string>
    <string name="rank">Rank</string>
</resources>