<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/teal_950"
        android:paddingHorizontal="24dp"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        android:id="@+id/nearby_main"
        >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backBtnOffline"
        android:background="@drawable/back_arrow"
        android:textColor="@color/heading"
        android:layout_marginStart="-18dp"
        android:contentDescription="@string/back"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        android:textColor="@color/heading"
        android:textSize="35sp"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_boxes"
        android:paddingHorizontal="16dp"
        android:paddingVertical="32dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offline_mode"
            android:layout_marginVertical="12dp"
            android:textColor="@color/heading"
            android:textSize="26sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/offline_mode_text"
            />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/offline_pvp"
        android:text="@string/offline_pvp"
        app:layout_constraintTop_toBottomOf="@id/offline_mode_text"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/options_hover"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:paddingVertical="18dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/offline_bot"
        android:text="@string/offline_bot"
        app:layout_constraintTop_toBottomOf="@id/offline_pvp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/options_hover"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:paddingVertical="18dp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>