<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_950"
    android:paddingHorizontal="24dp"
    android:paddingBottom="24dp"
    android:paddingTop="24dp"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backBtnMain"
        android:background="@drawable/back_arrow"
        android:textColor="@color/heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="-18dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        android:textColor="@color/heading"
        android:textSize="35sp"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/game_text"
        />

    <LinearLayout
        android:id="@+id/online_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:background="@drawable/main_boxes"
        android:padding="24dp"
        android:layout_marginTop="198dp"
        app:layout_constraintTop_toBottomOf="@id/game_text"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/online_mode"
            android:layout_marginVertical="12dp"
            android:textColor="@color/heading"
            android:textSize="26sp"
            android:textAlignment="center"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/onlineRoom"
            android:text="@string/online_friend"
            android:background="@drawable/options_hover"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:paddingVertical="18dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/onlineBtnRandom"
            android:text="@string/online_player"
            android:background="@drawable/options_hover"
            android:layout_marginVertical="8dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:paddingVertical="18dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/overall_status"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onlineProgressSearching"
            android:layout_marginBottom="24dp"
            android:indeterminateTint="@color/heading"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/online_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:background="@drawable/main_boxes"
        android:padding="24dp"
        android:layout_marginTop="198dp"
        app:layout_constraintTop_toBottomOf="@id/game_text"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/friendly_match"
            android:layout_marginVertical="12dp"
            android:textColor="@color/heading"
            android:textSize="26sp"
            android:textAlignment="center"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/onlineBtnHost"
            android:text="@string/host_room"
            android:background="@drawable/options_hover"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:paddingVertical="18dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/onlineBtnJoin"
            android:text="@string/join_room"
            android:background="@drawable/options_hover"
            android:layout_marginVertical="8dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:paddingVertical="18dp"
            />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/online_room_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:background="@drawable/main_boxes"
        android:padding="24dp"
        android:layout_marginTop="198dp"
        app:layout_constraintTop_toBottomOf="@id/game_text"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/join_room"
            android:layout_marginVertical="12dp"
            android:textColor="@color/heading"
            android:textSize="26sp"
            android:textAlignment="center"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_code"
            android:textColorHint="@color/white"
            android:id="@+id/room_code_input"
            android:textColor="@color/white"
            android:background="@drawable/username_input_hover"
            android:paddingVertical="16dp"
            android:paddingHorizontal="30dp"
            android:layout_marginVertical="12dp"
            android:maxLength="30"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/onlineRoomJoin"
            android:text="@string/enter"
            android:background="@drawable/options_hover"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:paddingVertical="18dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/join_friendly_room_status"
            />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/online_room_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:background="@drawable/main_boxes"
        android:padding="24dp"
        android:layout_marginTop="198dp"
        app:layout_constraintTop_toBottomOf="@id/game_text"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/host_room"
            android:layout_marginVertical="12dp"
            android:textColor="@color/heading"
            android:textSize="26sp"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/room_code_waiting"
            android:layout_marginVertical="12dp"
            android:textColor="@color/heading"
            android:textSize="26sp"
            android:textAlignment="center"
            android:background="@drawable/options_hover"
            android:padding="16dp"
            android:id="@+id/room_code"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/join_wait"
            android:layout_marginVertical="12dp"
            android:textColor="@color/heading"
            android:textSize="18sp"
            android:textAlignment="center"
            android:id="@+id/status_host"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onlineProgressHost"
            android:layout_marginBottom="24dp"
            android:indeterminateTint="@color/heading"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>