<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_boxes"
    android:paddingVertical="32dp"
    android:paddingHorizontal="12dp"
    >
    <TextView
        android:id="@+id/hosting_nearby_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/incoming_request"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="12dp"
        android:textColor="@color/heading"
        android:textSize="22sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hosting_nearby_text"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginVertical="48dp"
        android:weightSum="2"
        >
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/options_hover"
        android:text="@string/accept"
        android:textColor="@color/white"
        android:layout_weight="0.95"
        android:id="@+id/accept"
        />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/teal_border_button"
        android:text="@string/back"
        android:textColor="@color/heading"
        android:layout_weight="0.95"
        android:id="@+id/decline"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>