<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_950"
    android:orientation="vertical"
    android:gravity="center"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backBtn"
        android:background="@drawable/back_arrow"
        android:textColor="@color/heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/heading"
        android:textSize="35sp"
        android:id="@+id/profile"
        app:layout_constraintTop_toBottomOf="@id/backBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        />
    <TextView
        android:id="@+id/profile_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/teal_hover"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/modes_boxes"
        app:layout_constraintTop_toBottomOf="@id/profile_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="24dp"
        >

        <TextView
            android:id="@+id/wins"
            android:layout_width="0dp"
            android:layout_weight="0.47"
            android:layout_height="wrap_content"
            android:text="@string/wins"
            android:background="@drawable/main_boxes"
            android:textAllCaps="false"
            android:paddingVertical="16dp"
            android:textSize="26sp"
            android:layout_marginBottom="50dp"
            android:elevation="2dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:paddingHorizontal="8dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            />
        <TextView
            android:id="@+id/losses"
            android:layout_width="0dp"
            android:layout_weight="0.47"
            android:layout_height="wrap_content"
            android:text="@string/loss"
            android:background="@drawable/main_boxes"
            android:textAllCaps="false"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp"
            android:textSize="26sp"
            android:layout_marginBottom="50dp"
            android:elevation="2dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>